Add fonts and font styles

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
     text-align: center;
     font-size: 16px;
     line-height: 1.7;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    letter-spacing: 1.5px;
 }
 
 /* Footer */
@@ -12,6 +15,7 @@ body {
 footer p {
     font-style: italic;
     color: #797A7A;
+    font-size: 13px;
 }
 
 footer a {
